--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.1.6",
@@ -30,11 +31,15 @@
     "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
+    "react-sortablejs": "^6.1.4",
     "sonner": "^2.0.3",
+    "sortablejs": "^1.15.6",
     "tailwind-merge": "^3.3.0",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
