--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-sortablejs": "^6.1.4",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "sortablejs": "^1.15.6",
     "tailwind-merge": "^3.3.0",
