--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.830.0",
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
@@ -17,6 +19,7 @@
     "log4js": "^6.9.1",
     "mongoose": "^8.14.2",
     "nodemon": "^3.1.10",
-    "object-mapper": "^6.2.0"
+    "object-mapper": "^6.2.0",
+    "uuid": "^11.1.0"
   }
 }
