--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
