--- a/server/package.json
+++ b/server/package.json
@@ -12,16 +12,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.830.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "log4js": "^6.9.1",
+    "momment": "^0.0.1",
     "mongoose": "^8.14.2",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
-    "object-mapper": "^6.2.0"
+    "object-mapper": "^6.2.0",
+    "uuid": "^11.1.0"
   }
 }
